# ff_face_detection

./: .gitignore  LICENSE  README.md  build.gradle  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rl/ff_face_detection_yj/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  faceRecognize.cpp  faceRecognize.hpp  main.cpp  main.hpp  native-lib.cpp
app/src/main/java/com/rl/ff_face_detection_yj/: FaceRecognize.java  FaceRecognizeActivity.java  FaceRecognizeActivity_Java.java  MainActivity.java  MainActivity.kt  MainActivity_2.java  MainActivity_jni.java  MainActivity_jni.md  MyApplication.java  OpencvCameraActivity.java  UploadFaceActivity.java
app/src/main/res/drawable/: bg_loading.xml
app/src/main/res/layout/: activity_face_recognize_java.xml  activity_main.xml  activity_main2.xml  dialog_loading.xml
app/src/main/res/raw/: haarcascade_eye.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rl/ff_face_detection_yj/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle
